# presto-boilerplate-lvgl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lv_conf.h
SquareLineWorkspace/: SquareLine_Project.sll  SquareLine_Project.spj
SquareLineWorkspace/SquareLine_Project/: lv_conf.h
SquareLineWorkspace/SquareLine_Project/ui/: ui.c  ui.h
SquareLineWorkspace/SquareLine_Project/ui/screens/: ui_Screen1.c
drivers/ft6x36/: CMakeLists.txt  ft6x36.cpp  ft6x36.h
drivers/st7701/: st7701.cpp  st7701.hpp  st7701_presto.cmake
src/: main.cpp
